# crossterm-system-theme

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  testcli.js  tsconfig.json  tsup.config.ts
.agents/plans/: 00-initial-setup.md  01-napi-rs-rust-native-architecture.md
.github/workflows/: ci.yml  release-native.yml
native/: Cargo.toml
native/src/: api.rs  lib.rs  monitor.rs  test_mac.rs
native/src/platform/: macos.rs  mod.rs  unsupported.rs  windows.rs
sample/: current-theme.js  monitor.js  polling.js
scripts/: build-macos-helper.mjs  sync-version.mjs
src/: errors.ts  index.ts  logger.ts  types.ts
src/internal/: client.ts  exec.ts  native-bridge.ts  native.ts  parsers.ts
src/internal/providers/: fallback.ts  types.ts
src/internal/providers/detectors/: macos.ts  windows.ts
src/internal/providers/detectors/linux/: gnome.ts  index.ts  kde.ts  portal.ts  xfconf.ts
src/internal/providers/monitors/: linuxGsettings.ts
test/: client.test.ts  fallback.test.ts  parsers.test.ts  public-api.test.ts
test/helpers/: fake-exec.ts
