[package]
name = "crossterm-system-theme"
version = "0.3.2"
edition = "2021"

[lib]
name = "crossterm_system_theme"
crate-type = ["cdylib"]

[dependencies]
dark-light = "2.0.0"
napi = { version = "3.2.5", default-features = false, features = ["napi8"] }
napi-derive = "3.2.5"

[target.'cfg(target_os = "macos")'.dependencies]
bitflags = "2.10.0"
block2 = "0.6.2"
cocoa = "0.25.0"
lazy_static = "1.5.0"
libc = "0.2.177"
objc = "0.2.7"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "NSApplication",
  "NSAppearance",
  "NSColor",
  "NSResponder",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "alloc",
  "NSDictionary",
  "NSDistributedNotificationCenter",
  "NSKeyValueObserving",
  "NSNotification",
  "NSObjCRuntime",
  "NSOperation",
  "NSString",
  "block2",
] }

[build-dependencies]
napi-build = "2.1.5"
